# Solarpark-detection

./: .ebextensions  .ebignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  volor.config.js
.ebextensions/: options.config
.github/workflows/: docker.yml  lint.yml  test.yml  tests.yml
.platform/nginx/: nginx.conf
Archive/.aws-sam/: build.toml
Archive/Infrastructure/: manage_ec2_instance.ipynb
Archive/ML_Modell/: dataset_class.py  main_trainer.py  requirements.txt
Archive/Notebooks/: start_ec2_and_run_docker.ipynb
Archive/api-ml-serve/: README.md  main.py
Archive/api-postgis/: README.md  alembic.ini  api.dockerfile
Archive/api-preprocessing/: README.md  api-preprocessing.dockerfile  build-and-push.sh
Archive/api/archive/: crud.py  database.py  main_old.py  main_working.py  models.py  schemas.py  test.py
Archive/logging_test/: test.py
Archive/ml-serve/archive/: build_image.sh  model-config.yaml  test-ml-serve.dockerfile
Archive/ml-serve/lambda/: build.toml  ml-serve-lambda.dockerfile  test.dockerfile
Archive/nginx/: nginx.conf
Archive/nginx/conf.d/: 00_application.conf
Archive/preprocessing/archive/: save_to_disk_old.py
Archive/preprocessing_api/: aws_functions.py  cloud_clients.py  constants.py  main_preprocessing.py  save_to_disk.py
Archive/torchserve-lambda/: README.md  samconfig.toml  template.yaml
Create_figures_thesis/: Introduction_chapter.ipynb
Introduction_Notebooks/: create_masks_with_tile_name.ipynb
Notebooks/Infrastructure/: docker_py_intro.ipynb  manage_ec2_instance.ipynb  start_docker_compose.ipynb
Notebooks/Introduction/: Validate_frontend_generated_Data.ipynb  create_masks_with_tile_name.ipynb  work_with_aws.ipynb
Notebooks/ML_Modell/: Find_solution_losses_void_masks.ipynb  Introduction_DL_Model_pyTorch.ipynb  calculate_avg_confidence_in_pred.ipynb  check_model_pred.ipynb  coco_eval.py  coco_utils.py  config.py  create_model_with_pytorch.ipynb  create_train_val_test_split.ipynb  engine.py  evaluate_model_performance.ipynb  fix_unet_jit_export.ipynb  group_by_aspect_ratio.py  improve_mode_performance.ipynb  loss_epochs_10_raw.csv  loss_epochs_2.csv  loss_steps_epochs_10_raw.pkl  loss_steps_epochs_2.pkl  minimal_example_pretrained_model.ipynb  model_training.ipynb  presets.py  solar-parks_classified.geojson  testset.geojson  train.py  train_u_net.ipynb  transforms.py  update_model_torchserve.ipynb  utils.py
Notebooks/ML_Modell/trainings_results/: Backbones_Performance.csv  cleaned_vs_verifed_df.csv  u_net_undersampling_cleaned_timm-resnest14d_15_16_0.005_None.csv  u_net_undersampling_cleaned_timm-resnest14d_15_16_0.005_None.pkl  u_net_undersampling_cleaned_verified_efficientnet-b0_10_16_0.001_None.csv  u_net_undersampling_cleaned_verified_efficientnet-b0_10_16_0.001_None.pkl  u_net_undersampling_cleaned_verified_efficientnet-b0_10_16_0.005_None.csv  u_net_undersampling_cleaned_verified_efficientnet-b0_10_16_0.005_None.pkl  u_net_undersampling_cleaned_verified_efficientnet-b0_15_16_0.01_None.csv  u_net_undersampling_cleaned_verified_efficientnet-b0_15_16_0.01_None.pkl  u_net_undersampling_cleaned_verified_efficientnet-b0_1_16_0.001_RandomHorizontalFlip.csv  u_net_undersampling_cleaned_verified_efficientnet-b0_1_16_0.001_RandomHorizontalFlip.pkl  u_net_undersampling_cleaned_verified_efficientnet-b0_2_16_0.01_None.csv  u_net_undersampling_cleaned_verified_efficientnet-b0_2_16_0.01_None.pkl  u_net_undersampling_cleaned_verified_resnet18_10_16_0.005_None.csv  u_net_undersampling_cleaned_verified_resnet18_10_16_0.005_None.pkl  u_net_undersampling_cleaned_verified_timm-resnest14d_10_16_0.005_None.csv  u_net_undersampling_cleaned_verified_timm-resnest14d_10_16_0.005_None.pkl  u_net_undersampling_cleaned_verified_timm-resnest14d_15_16_0.001_None.csv  u_net_undersampling_cleaned_verified_timm-resnest14d_15_16_0.001_None.pkl  (+10 more)
Notebooks/downloader/: Sentinel_2_LTA-Products.ipynb
Notebooks/preprocessing/: analyse_preprocesing.ipynb  analyse_trainings_polygons.ipynb  calc_padding.ipynb  fix_projection.ipynb  get_jwt_token.ipynb  new_CDSE_api.ipynb
download_sentinel_data/: .editorconfig  API_call_handler.py  Sentinel_2_API.ipynb  main.py
download_sentinel_data/notebooks/: Sentinel_2_API.ipynb
raw_data/: README.md  S2A_OPER_GIP_TILPAR_MPC__20151209T095117_V20150622T000000_21000101T000000_B00.kml
raw_data/DEU_adm/: DEU_adm3.csv
src/: README.md  aws-policy.json  config.py  docker-compose.yml
src/ML_Modell/: Trainer_S2_Unet.py  dataset_class.py  main_trainer.py  model_config.py  requirements.txt
src/api/: .dockerignore  README.md  alembic.ini  api.dockerfile  debug.py  prestart.sh  requirements.txt  test-start.sh
src/api-ml-serve/: .dockerfile  main.py  requirements.txt
src/api-postgis/: api.dockerfile
src/api-postgis/alembic/: env.py
src/api-preprocessing/: .dockerfile  requirements.txt
src/download_sentinel_data/: .gitignore  API_call_handler.py  README.md  constants.py  main.py  main_download.py  sentinel_api.py  sentinel_on_aws.py
src/downloader/: README.md  downloader.dockerfile  logging.conf  requirements.txt
src/frontend/: README.md  frontend.dockerfile  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vue.config.js
src/ml-serve/: .dockerignore  README.md  build_image.sh  config.properties  handler.py  lambda_function.py  make-archive.sh  make_archive.sh  ml-serve.dockerfile  requirements.txt  template.yml  test.dockerfile  test_model.py
src/new-frontend/: .eslintrc.cjs  .gitignore  index.html  new-frontend.dockerfile  package-lock.json  package.json
src/nginx/: nginx.conf
src/preprocess_data_to_disk/: constants.py  main_preprocess.py  preprocessing_dataset_to_disk.py
src/preprocessing/: .dockerignore  preprocessing.dockerfile  requirements.txt
src/processing/: .dockerignore  processing.dockerfile  requirements-linux.txt  requirements.txt
src/scripts/: init-swarm.sh  run-container.sh
tests/integration/: test_ml-serve_docker.py
(+273 files in other folders)
